--- a/api/build.gradle
+++ b/api/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
-    id 'io.spring.dependency-management' version "1.0.11.RELEASE"
     id 'org.springframework.boot' version '2.4.4'
+    id 'io.spring.dependency-management' version '1.0.8.RELEASE'
 }
 
 repositories {
@@ -11,5 +11,6 @@ repositories {
 dependencies {
     implementation project(':db')
     implementation 'org.springframework.boot:spring-boot-starter-web'
-
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-devtools'
 }
