--- a/db/build.gradle
+++ b/db/build.gradle
@@ -1,16 +1,13 @@
 plugins {
     id 'java'
-    id 'io.spring.dependency-management' version "1.0.11.RELEASE"
-    id 'org.springframework.boot' version '2.4.4'
 }
 
 repositories {
     mavenCentral()
-    jcenter()
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.4.4'
     implementation group: 'com.h2database', name: 'h2', version: '1.4.200'
 
     compileOnly 'org.projectlombok:lombok:1.18.12'
