--- a/db/build.gradle
+++ b/db/build.gradle
@@ -7,8 +7,8 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.4.4'
-    implementation group: 'com.h2database', name: 'h2', version: '1.4.200'
+    implementation "org.springframework.boot:spring-boot-starter-data-jpa:$springBootVersion"
+    implementation 'com.h2database:h2:1.4.200'
 
     compileOnly 'org.projectlombok:lombok:1.18.12'
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
