Add archive name.

--- a/30-second-grade-project-with-zip/build.gradle
+++ b/30-second-grade-project-with-zip/build.gradle
@@ -12,6 +12,7 @@ task generateDescriptions(type: Copy) {
 
 task zipDescriptions(type: Zip) {
     from "$buildDir/descriptions/"
-    destinationDir(buildDir)
+    destinationDirectory = buildDir
+    archiveName 'descriptions.zip'
 }
 assemble.dependsOn generateDescriptions
