--- a/theme-park-rides/build.gradle
+++ b/theme-park-rides/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'base'
 }
 
-task generateDescriptions(type: Copy) {
+tasks.register('generateDescriptions', Copy) {
     from 'descriptions'
     into "$buildDir/descriptions"
     filter(ReplaceTokens, tokens: [THEME_PARK_NAME: "Grelephant's Wonder World"])
