Use non-deprecated archiveFileName.

--- a/theme-park-rides-with-zip/build.gradle
+++ b/theme-park-rides-with-zip/build.gradle
@@ -13,5 +13,5 @@ tasks.register('generateDescriptions', Copy) {
 tasks.register('zipDescriptions', Zip) {
     from "$buildDir/descriptions/"
     destinationDirectory = buildDir
-    archiveName 'descriptions.zip'
+    archiveFileName = 'descriptions.zip'
 }
