--- a/theme-park-rides-status/build.gradle
+++ b/theme-park-rides-status/build.gradle
@@ -12,12 +12,12 @@ dependencies {
     testImplementation  'org.junit.jupiter:junit-jupiter-params:5.7.2'
 }
 
-jar {
+tasks.named('jar') {
     manifest {
         attributes('Main-Class': 'com.tomgregory.themepark.Application')
     }
 }
 
-test {
+tasks.named('test') {
     useJUnitPlatform()
 }
