--- a/theme-park-rides-status/build.gradle
+++ b/theme-park-rides-status/build.gradle
@@ -14,7 +14,7 @@ dependencies {
 
 tasks.named('jar') {
     manifest {
-        attributes('Main-Class': 'com.tomgregory.themepark.Application')
+        attributes('Main-Class': 'com.tomgregory.themepark.RideStatusService')
     }
 }
 
