--- a/theme-park-rides-status/build.gradle
+++ b/theme-park-rides-status/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'java'
+    id 'application'
 }
 
 repositories {
@@ -8,8 +8,9 @@ repositories {
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
-    testRuntimeOnly  'org.junit.jupiter:junit-jupiter-engine:5.7.2'
-    testImplementation  'org.junit.jupiter:junit-jupiter-params:5.7.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.7.2'
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
 }
 
 tasks.named('jar') {
@@ -20,4 +21,15 @@ tasks.named('jar') {
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+application {
+    mainClass = 'com.tomgregory.themepark.RideStatusService'
+}
+
+tasks.register('runJar', JavaExec) {
+    classpath tasks.named('jar').map { it.outputs }
+    classpath configurations.runtimeClasspath
+    mainClass = 'com.tomgregory.themepark.RideStatusService'
+    args ' teacups'
 }
