Fix missed package rename.

--- a/theme-park-rides-status/build.gradle
+++ b/theme-park-rides-status/build.gradle
@@ -25,7 +25,7 @@ tasks.withType(Test).configureEach {
 }
 
 application {
-    mainClass = 'com.tomgregory.themepark.RideStatusService'
+    mainClass = 'com.gradlehero.themepark.RideStatusService'
 }
 
 tasks.register('runJar', JavaExec) {
