Minor fixes to Gradle version and package name.

--- a/theme-park-rides-status/build.gradle
+++ b/theme-park-rides-status/build.gradle
@@ -16,7 +16,7 @@ dependencies {
 
 tasks.named('jar') {
     manifest {
-        attributes('Main-Class': 'com.tomgregory.themepark.RideStatusService')
+        attributes('Main-Class': 'com.gradlehero.themepark.RideStatusService')
     }
 }
 
