Use Records instead of Lombok.

--- a/theme-park-manager-api/build.gradle
+++ b/theme-park-manager-api/build.gradle
@@ -10,7 +10,10 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+}
 
-    compileOnly 'org.projectlombok:lombok:1.18.20'
-    annotationProcessor 'org.projectlombok:lombok:1.18.20'
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(16)
+    }
 }
