Theme park manager now uses RideStatusService.

--- a/theme-park-manager-full/api/build.gradle
+++ b/theme-park-manager-full/api/build.gradle
@@ -9,8 +9,6 @@ repositories {
 }
 
 dependencies {
-    implementation project(':db')
+    implementation project(':service')
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-devtools'
 }
