--- a/theme-park-manager-full/api/build.gradle
+++ b/theme-park-manager-full/api/build.gradle
@@ -9,6 +9,7 @@ repositories {
 }
 
 dependencies {
+    implementation project(':ui')
     implementation project(':service')
     implementation 'org.springframework.boot:spring-boot-starter-web'
 }
