--- a/theme-park-manager-refactored/api/build.gradle
+++ b/theme-park-manager-refactored/api/build.gradle
@@ -12,4 +12,11 @@ dependencies {
     implementation project(':ui')
     implementation project(':service')
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.7.2'
+}
+
+tasks.withType(Test).configureEach {
+    useJUnitPlatform()
 }
