--- a/theme-park-manager-refactored/service/build.gradle
+++ b/theme-park-manager-refactored/service/build.gradle
@@ -1,15 +1,9 @@
 plugins {
     id 'java-library'
-}
-
-repositories {
-    mavenCentral()
+    id 'com.gradlehero.themepark-conventions'
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
-    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.7.2'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
 }
 
@@ -17,10 +11,6 @@ tasks.named('jar') {
     manifest {
         attributes('Main-Class': 'com.gradlehero.themepark.RideStatusService')
     }
-}
-
-tasks.withType(Test).configureEach {
-    useJUnitPlatform()
 }
 
 tasks.register('runJar', JavaExec) {
