--- a/theme-park-manager-refactored/ui/build.gradle
+++ b/theme-park-manager-refactored/ui/build.gradle
@@ -1,3 +1,10 @@
+import com.gradlehero.themepark.FileDiffTask
+
 plugins {
     id 'java-library'
+}
+
+tasks.register('fileDiff', FileDiffTask) {
+    file1 = file('src/main/resources/static/images/teacups.jpg')
+    file2 = file('src/main/resources/static/images/logflume.jpg')
 }
