--- a/theme-park-manager/ui/build.gradle
+++ b/theme-park-manager/ui/build.gradle
@@ -1,3 +1,15 @@
 plugins {
     id 'java-library'
 }
+
+// the following task generates zip for lesson "Practical: creating a multi-project build" so can be ignored
+tasks.register('uiZip', Zip) {
+    from parent.layout.projectDirectory
+    include "${project.name}/build.gradle"
+    include "${project.name}/src/**"
+    destinationDirectory = layout.buildDirectory
+    archiveFileName = 'ui.zip'
+}
+tasks.named('build').configure {
+    dependsOn tasks.named('uiZip')
+}
