--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -39,6 +39,9 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew gD zD
       working-directory: theme-park-rides-with-zip-fixed
+    - name: Build with Gradle
+      run: ./gradlew build
+      working-directory: file-diff-plugin
     - name: Archive UI
       uses: actions/upload-artifact@v2
       with:
