--- a/theme-park-manager-refactored/api/build.gradle
+++ b/theme-park-manager-refactored/api/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.springframework.boot' version "$springBootVersion"
+    id 'org.springframework.boot' version '2.5.3'
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
     id 'com.gradlehero.themepark-conventions'
 }
