--- a/theme-park-manager/api/build.gradle
+++ b/theme-park-manager/api/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version "$springBootVersion"
+    id 'org.springframework.boot' version '2.5.3'
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
 }
 
