--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -45,6 +45,9 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew build
       working-directory: gradle-in-the-real-world/code-coverage
+    - name: Build with Gradle
+      run: ./gradlew assemble # deliberately not running check
+      working-directory: gradle-in-the-real-world/code-style
     - name: Archive UI
       uses: actions/upload-artifact@v2
       with:
