Upload course-downloadable.zip to gradle-build-bible S3 bucket.

--- a/theme-park-manager/ui/build.gradle
+++ b/theme-park-manager/ui/build.gradle
@@ -2,13 +2,22 @@ plugins {
     id 'java-library'
 }
 
-// the following task generates downloadable for lesson "Practical: creating a multi-project build" so can be ignored
+// the following generates downloadable files for lesson "Practical: creating a multi-project build" so can be ignored
 tasks.register('downloadable', Copy) {
     from parent.layout.projectDirectory
     include "${project.name}/build.gradle"
     include "${project.name}/src/**"
     into layout.buildDirectory.dir('course-downloadable')
 }
+
+tasks.register('downloadableZip', Zip) {
+    from parent.layout.projectDirectory
+    include "${project.name}/build.gradle"
+    include "${project.name}/src/**"
+    archiveName = 'course-downloadable.zip'
+    destinationDirectory = layout.buildDirectory
+}
+
 tasks.named('assemble').configure {
-    dependsOn tasks.named('downloadable')
+    dependsOn tasks.named('downloadable'), tasks.named('downloadableZip')
 }
