--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -7,6 +7,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: write
     steps:
     - uses: actions/checkout@v2
     - name: set up JDK 16
@@ -59,3 +62,10 @@ jobs:
       with:
         name: ui
         path: theme-park-manager/ui/build/course-downloadable
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        role-to-assume: arn:aws:iam::299404798587:role/gradle-build-bible-Role-FATI9KHI61JP
+        aws-region: eu-west-1
+    - name: Copy downloadable to S3
+      run: aws s3 cp theme-park-manager/ui/build/course-downloadable.zip s3://gradle-build-bible
