--- a/cloud.yml
+++ b/cloud.yml
@@ -43,7 +43,7 @@ Resources:
           - Effect: Allow
             Action: sts:AssumeRoleWithWebIdentity
             Principal:
-              Federated: !ImportValue GithubOidc
+              Federated: arn:aws:iam::299404798587:oidc-provider/token.actions.githubusercontent.com
             Condition:
               StringLike:
                 token.actions.githubusercontent.com:sub: !Sub 'repo:${GitHubRepository}:*'
