--- a/theme-park-rides-status/build.gradle
+++ b/theme-park-rides-status/build.gradle
@@ -1,6 +1,5 @@
 plugins {
     id 'application'
-    id 'org.unbroken-dome.test-sets' version '4.0.0'
 }
 
 repositories {
@@ -35,8 +34,14 @@ tasks.register('runJar', JavaExec) {
     args ' teacups'
 }
 
-testSets {
-    integrationTest
+testing {
+    suites {
+        integrationTest(JvmTestSuite) {
+            dependencies {
+                implementation project()
+            }
+        }
+    }
 }
 
 tasks.named('check') {
