--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -66,7 +66,7 @@ jobs:
     - name: Configure Gradle Hero AWS credentials
       uses: aws-actions/configure-aws-credentials@v2
       with:
-        role-to-assume: arn:aws:iam::299404798587:role/gradle-hero-Role-KS41B43T74UG
+        role-to-assume: arn:aws:iam::299404798587:role/gradle-hero-website-initial-AssetsS3BucketRole-149Y5H75V3G6Z
         aws-region: eu-west-1
     - name: Copy downloadable to Gradle Hero S3 Bucket
-      run: aws s3 cp theme-park-manager/ui/build/ui.zip s3://gradle-hero
+      run: aws s3 cp theme-park-manager/ui/build/ui.zip s3://gradle-hero-website-assets
