--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -62,6 +62,13 @@ jobs:
       id-token: write
       contents: write
     steps:
+    - uses: actions/checkout@v3
+    - name: set up JDK 17
+      uses: actions/setup-java@v3
+      with:
+        java-version: '17'
+        distribution: 'adopt'
+        cache: gradle
     - name: Build theme-park-manager
       run: ./gradlew build
       working-directory: theme-park-manager
